--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,3 +117,7 @@ add_subdirectory(src/unit_tests)
 
 ### Packaging
 add_subdirectory(packaging)
+SET(CPACK_GENERATOR "DEB")
+SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "anthcp") #required
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libxml2, libxslt, libsnmp, qt5-default")
+INCLUDE(CPack)
